<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="es.studium.pmdm_practicat6.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_peliculas"
        android:name="es.studium.pmdm_practicat6.ui.peliculas.PeliculasFragment"
        android:label="@string/menu_peliculas"
        tools:layout="@layout/fragment_peliculas" />

    <fragment
        android:id="@+id/nav_series"
        android:name="es.studium.pmdm_practicat6.ui.series.SeriesFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/nav_detallesSeriesFragment"
        android:name="es.studium.pmdm_practicat6.ui.series.DetallesSeriesFragment"
        android:label="Detalles"
        tools:layout="@layout/fragment_detallesseries" />

</navigation>