<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarilloApp"
    tools:context=".ui.series.DetallesSeriesFragment">

   <TextView
       android:id="@+id/lblTitulo"
       style="@style/textoDetalles.lbl"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/lbl_titulo"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.793"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.020" />

   <TextView
       android:id="@+id/text_series"
       style="@style/textoDetalles"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.793"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/lblTitulo"
       app:layout_constraintVertical_bias="0.01"
       tools:text="@string/valor_titulo" />

   <TextView
       android:id="@+id/lblDirector"
       style="@style/textoDetalles.lbl"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/lbl_director"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.793"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/text_series"
       app:layout_constraintVertical_bias="0.062" />

   <TextView
       android:id="@+id/valorDirector"
       style="@style/textoDetalles"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/valor_director"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.793"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/lblDirector"
       app:layout_constraintVertical_bias="0.011" />

   <TextView
       android:id="@+id/lblClasificacion"
       style="@style/textoDetalles.lbl"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:text="@string/lbl_calificacion"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.793"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/valorDirector"
       app:layout_constraintVertical_bias="0.062" />

   <ImageView
       android:id="@+id/image_calificacion"
       android:layout_width="139dp"
       android:layout_height="23dp"
       android:src="@drawable/a_cincoestrellas"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.761"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/lblClasificacion"
       app:layout_constraintVertical_bias="0.011" />

   <TextView
       android:id="@+id/lblReparto"
       style="@style/textoDetalles.lbl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/lbl_reparto"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.056"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/image_series"
       app:layout_constraintVertical_bias="0.062" />

   <TextView
       android:id="@+id/valorReparto"
       style="@style/textoDetalles"
       android:layout_width="373dp"
       android:layout_height="108dp"
       android:text="@string/valor_reparto"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/lblReparto"
       app:layout_constraintVertical_bias="0.01" />

   <TextView
       android:id="@+id/lblSinopsis"
       style="@style/textoDetalles.lbl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/lbl_sinopsis"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.058"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/valorReparto"
       app:layout_constraintVertical_bias="0.01" />

   <TextView
       android:id="@+id/valorSinopsis"
       style="@style/textoDetalles"
       android:layout_width="373dp"
       android:layout_height="180dp"
       android:text="@string/valor_sinopsis"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/lblSinopsis"
       app:layout_constraintVertical_bias="0.01" />

   <TextView
       android:id="@+id/lblTemporadas"
       style="@style/textoDetalles.lbl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/lbl_temporadas"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.065"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/valorSinopsis"
       app:layout_constraintVertical_bias="0.01" />

   <TextView
       android:id="@+id/valorTemporadas"
       style="@style/textoDetalles"
       android:layout_width="373dp"
       android:layout_height="25dp"
       android:text="@string/valor_temporadas"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/lblTemporadas"
       app:layout_constraintVertical_bias="0.01" />

   <ImageView
       android:id="@+id/image_series"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.056"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.026"
       tools:src="@drawable/death" />




</androidx.constraintlayout.widget.ConstraintLayout>